2006-07-19  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Use some more zval macro's to cleanup things a bit

2006-07-02  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Made some fixes to ea_info.c to make eA compile on windows again.
          This should fix bug #116.

2006-06-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Cleaned up the checking for other incompatible extensions a 
          bit. This should fix the use of IonCube with eAccelerator. I did 
          some test loading IonCube in different ways and never got in to 
          trouble. This fixes ticket #66.

2006-06-30  Hans Rakers <hans at parse dot nl>

	* Added ability to sort table columns by clicking on the table
	  headings in the control panel
	* Quick & dirty fix for eaccelerator_clear to work with the new
	  cache dir hashing. This still needs to be done for win32.

	  eaccelerator_clean still needs some fixing to work with the
	  dir hashing.

2006-06-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed ifdef for #108 to use only on windows
        * Fix for bug #109, #31 and SF-1102070
        * Cleaned-up RINIT a bit for hostname determining
        * Included the fix from ticket #94 for zts

2006-06-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix ticket #108
        * Removed webui.[c|h] from the windows project files

2006-06-06  Hans Rakers <hans at parse dot nl>

        * Fix for ticket #101 ('bailout' is used in zend_globals.h in a ZTS
          build) as suggested by <ihanick at gmail dot com>

2006-06-02  Hans Rakers <hans at parse dot nl>

        * Removed two unused vars from the internal datastructures
        * Fixed constructor inheritance. This fixes handling of implicit
          constructors and solves ticket #89

2006-05-14  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Forgot to remove some debug messages for the filter bug.
